remove additional references to hosts

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -16,7 +16,7 @@ image:2315.png[]
 [[requirements-for-provisioning-virtual-machines-and-instances]]
 === Requirements for Provisioning Virtual Machines and Instances
 
-{product-title} supports the provisioning of VMware ESX hosts/hypervisors. To provision a virtual machine from VMware providers, you must have an appliance with the Automation Engine role enabled.
+{product-title} supports the provisioning of VMware ESX hypervisors. To provision a virtual machine from VMware providers, you must have an appliance with the Automation Engine role enabled.
 
 If you are using a Windows template, the following configuration is required:
 
@@ -124,9 +124,7 @@ image:2318.png[]
 . Click image:1847.png[](*Configuration*), then image:1848.png[](*Add a new System Image Type*).
 . In *Basic Information*, type in a *Name* and select a *Type*.
 image:2317.png[]
-* Use *Host* if you want this image type to only apply to hosts.
 * Use *Vm* if you want this image type to only apply to virtual machines.
-* Use *Any* if this image type can be used for either hosts or virtual machines.
 . Click *Add*.
 [NOTE]
 ====
@@ -189,9 +187,7 @@ The following procedure creates a system image type for ISO Servers.
 . Click image:1847.png[](*Configuration*), then image:1862.png[](*Add a new System Image Type*).
 . In *Basic Information*, type in a *Name* and select a *Type*.
 image:2317.png[]
-* Use *Host* if you want this image type to only apply to hosts.
 * Use *Vm* if you want this image type to only apply to virtual machines.
-* Use *Any* if this image type can be used for either hosts or virtual machines.
 . Click *Add*.
 image:2322.png[]
 [NOTE]
@@ -638,13 +634,6 @@ Some non-default placement methods, for example the *redhat_best_placement_with_
 
 To enable these resources for all groups, set the scope to *All*. To limit access to a select group, create a tag in the *Provisioning Scope* category with the exact name of the user group and set this tag on the desired resources. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7-Beta/html-single/general_configuration/#regions[Tags] in _General Configuration_ for information on creating tags.
 
-To set the scope for a host:
-
-. Navigate to menu:Compute[Infrastructure > Hosts].
-. Select the host to set the provisioning scope for.
-. Click image:1941.png[](*Policy*), and then image:1851.png[](*Edit Tags*).
-. From the *Select a customer tag to assign* drop down, select *Provisioning Scope* and then a value for the tag from the next drop down menu.
-. Click *Save*.
 
 To set the scope for a datastore:
 
