minor wording fix to include editing lines as well as adding

--- a/doc-Managing_Authentication/topics/External_AD.adoc
+++ b/doc-Managing_Authentication/topics/External_AD.adoc
@@ -100,7 +100,7 @@ user_attributes = +mail, +givenname, +sn, +displayname, +domainname
 # cp ${TEMPLATE_DIR}/etc/httpd/conf.d/manageiq-external-auth.conf.erb /etc/httpd/conf.d/manageiq-external-auth.conf
 ----
 +
-. Edit the `/etc/httpd/conf.d/manageiq-external-auth.conf` file to point to your Kerberos domain hosted by your Active Directory domain by adding the lines for `KrbAuthRealms`, `Krb5KeyTab` and `KrbServiceName` for your environment:
+. Edit the `/etc/httpd/conf.d/manageiq-external-auth.conf` file to point to your Kerberos domain hosted by your Active Directory domain by adding or editing the lines for `KrbAuthRealms`, `Krb5KeyTab` and `KrbServiceName` for your environment:
 +
 ----
 <Location /dashboard/kerberos_authenticate>
