--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
@@ -1,7 +1,9 @@
 [id="Enabling_conversion_hosts_in_cloudforms"]
 = Enabling the conversion hosts in CloudForms
 
-You can enable the xref:Enabling_rhv_conversion_hosts_in_cloudforms[Red Hat Virtualization] or xref:Enabling_osp_conversion_hosts_in_cloudforms[OpenStack Platform] conversion hosts in CloudForms.
+You must tag and validate the Red Hat Virtualization conversion hosts.
+
+OpenStack Platform conversion hosts do not require configuration in CloudForms.
 
 [[Enabling_rhv_conversion_hosts_in_cloudforms]]
 .Enabling Red Hat Virtualization conversion hosts
@@ -17,8 +19,3 @@ You can enable the xref:Enabling_rhv_conversion_hosts_in_cloudforms[Red Hat Virt
 
 .Red Hat Virtualization Conversion Host Properties
 image:Conversion_host_properties.png[]
-
-[[Enabling_osp_conversion_hosts_in_cloudforms]]
-.Enabling OpenStack Platform conversion hosts
-
-TBD
