--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -14,16 +14,14 @@ The network configuration must not be changed in any way during the migration. I
 
 . Check that the source virtual machines do not have encrypted disks.
 
+. Check that each NIC on each virtual machine has no more than 1 IPv4 and/or 1 IPv6 address. Otherwise, the migration will fail.
+
 . If you are migrating to Red Hat Virtualization:
 
 * Check that source virtual machine names do not duplicate virtual machine names in the target environment. A name conflict will cause the migration to fail.
 
 * Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
 
-. If you are migrating to OpenStack Platform:
-
-* Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] on the virtual machines to capture IP addresses so that they can be associated with port groups.
-
-* Check that each NIC on each virtual machine has no more than 1 IPv4 and/or 1 IPv6 address. Otherwise, the migration will fail.
+. If you are migrating to OpenStack Platform, install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] on the virtual machines to capture IP addresses so that they can be associated with port groups.
 
 You are ready to prepare the target environment, xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform].
