SSH key for osp conversion hosts

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -36,7 +36,7 @@ While you are adding OpenStack Platform to CloudForms (menu:Compute[Clouds > Pro
 
 .. Click the *RSA key pair* tab in the *Endpoints* section.
 .. Enter the *Username*, `cloud-user`.
-.. Click *Choose File*, browse to the SSH key file for OpenStack Platform, and click *Add*.
+.. Click *Choose File*, browse to the SSH key file that will be used to create the conversion hosts for OpenStack Platform, and click *Add*.
 
 . Create and configure the xref:Conversion_hosts[conversion hosts].
 +
