--- a/doc-Managing_Authentication/topics/LDAP.adoc
+++ b/doc-Managing_Authentication/topics/LDAP.adoc
@@ -59,7 +59,7 @@ In both LDAP and LDAPS, you can use groups from your directory service to set th
 +
 [IMPORTANT]
 ====
-If you do not select *Get User Groups from LDAP*, the user must be defined in the VMDB where the User ID is the same as the user's name in your directory service typed in lowercase. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/general_configuration/#creating_a_user[Creating a User] in the _General Configuration_ for steps on creating users.
+If you do not select *Get User Groups from LDAP*, the user must be defined in the VMDB where the User ID is the same as the user's name in your directory service typed in lowercase. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/general_configuration/#creating_a_user[Creating a User] in _General Configuration_ for steps on creating users.
 ====
 +
 [NOTE]
