ssh key for osp conversion hosts

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -15,5 +15,12 @@ If you are migrating to OpenStack Platform:
 * `/var/tmp` (1 GB for each conversion)
 * `/var/logs` (5 GB)
 
+. Add the SSH key for `cloud-user` in CloudForms:
+
+.. Click menu:Compute[Clouds > Providers] and select the OpenStack Platform provider.
+.. From the *Configuration* dropdown menu, select *Edit Selected Cloud Provider*.
+.. Click the *RSA key pair* tab in the *Endpoints* section.
+.. Enter the *Username*, `cloud-user`.
+.. Click *Choose File*, browse to the SSH key file that you use to create OpenStack Platform instances, and click *Save*.
 
 You are ready to configure the conversion hosts for xref:Configuring_conversion_hosts_for_transformation[transformation].
