--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
@@ -1,5 +1,5 @@
 [id="Enabling_conversion_hosts_in_cloudforms"]
-= Enabling the conversion hosts in CloudForms
+= Enabling conversion hosts in CloudForms
 
 You must tag and validate the Red Hat Virtualization conversion hosts.
 
