--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
@@ -10,7 +10,7 @@ all:
       v2v_transport_methods:
         - vddk
         - ssh
-      v2v_max_concurrent_conversions: 20
+      v2v_max_concurrent_conversions: _20_
       manageiq_provider_name: _RHV_
     chost2.example.com:
       v2v_host_type: openstack
