--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
@@ -16,7 +16,9 @@
 
 == Migration plan errors[[Migration_plan_errors]]
 
-*Virtual machines cannot be discovered.* If a migration plan cannot discover the source virtual machines, xref:Retrying_and_remigrating[remigrate] the virtual machines. If the source virtual machines were migrated in the past, they cannot be discovered with the migration plan because they are marked as `migrated` in the CloudForms VMDB.
+*Virtual machines are not discovered.* If a migration plan does not discover the source virtual machines and if the virtual machines have never been migrated in the past, check that the datastores and networks of the source virtual machines have been added to the Infrastructure Mapping.
+
+If a migration plan does not discover source virtual machines that have been migrated in the past, xref:Retrying_and_remigrating[remigrate] the virtual machines. Previously migrated virtual machines cannot be discovered because they are marked as `migrated` in the CloudForms VMDB.
 
 *Virtual machines cannot be imported.* If you cannot import the source virtual machines with a CSV file while creating a migration plan, check the xref:CSV_file[CSV file's format and fields]. Create a new migration plan using the updated CSV file.
 
