--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
@@ -1,7 +1,7 @@
 [id="Ims_rhel_pre-migration_ansible_playbook_example"]
 = RHEL pre-migration Ansible playbook example
 
-You can create an Ansible playbook to automate tasks on the virtual machines before and after migration and add them to your migration plan. This playbook performs the following tasks to configure a Red Hat Enterprise Linux virtual machine:
+This playbook performs the following tasks to configure a Red Hat Enterprise Linux virtual machine:
 
 * Preserving the static IP address configuration
 * Installing the Red Hat Virtualization guest agent
