--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -36,5 +36,5 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 +
 [NOTE]
 ====
-For best performance, deploy the conversion hosts on a compute node with nested virtualization enabled.
+For best performance, deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. This is a technology preview.
 ====
