add migrate vms

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -337,6 +337,8 @@ include::create-template-based-on-vm.adoc[]
 :leveloffset: 2
 include::Retiring_Virtual_Machines.adoc[]
 
+:leveloffset: 2
+include::Migrate_VMs.adoc[]
 
 
 
