--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,4 +1,4 @@
-[[Migrating_the_infrastructure]][id='Migrating_the_infrastructure']
+[[Migrating_the_infrastructure]]
 = Migrating the infrastructure
 
 Migrating the infrastructure involves the following key tasks:
@@ -14,4 +14,3 @@ You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in prog
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
-include::modules/proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
