--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_considerations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_considerations.adoc
@@ -25,15 +25,17 @@ The maximum number of concurrent virtual machine migrations per conversion host 
 
 You must select the transformation option, VDDK or SSH, that is appropriate for your migration size and environment:
 
-VDDK::
-* Recommended because it is approximately twice as fast as SSH
-* Compiled with `nbdkit` to provide direct connectivity to the virtual machine disks
-* Requires VDDK package download
-* Conversion host configuration requires a location
+* *VDDK*
 
-SSH::
-* Slower than VDDK
-* Better suited for large-scale migrations than VDDK
-* Does not require additional downloads, packages, tools, or compilation
-* SSH access must be enabled on the source hypervisors
-* Source and target environments must share SSH keys
+** Recommended because it is approximately twice as fast as SSH
+** Compiled with `nbdkit` to provide direct connectivity to the virtual machine disks
+** Requires VDDK package download
+** Requires a location for conversion host configuration
+
+* *SSH*
+
+** Slower than VDDK
+** Better suited for large-scale migrations than VDDK
+** Does not require additional downloads, packages, tools, or compilation
+** SSH access must be enabled on the source hypervisors
+** Source and target environments must share SSH keys
