--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc
@@ -3,10 +3,8 @@
 
 OpenStack Platform conversion hosts do not require configuration in CloudForms.
 
-You must tag and validate the Red Hat Virtualization conversion hosts.
-
 [[Enabling_rhv_conversion_hosts_in_cloudforms]]
-.Enabling Red Hat Virtualization conversion hosts
+Red Hat Virtualization conversion hosts require tagging and validation:
 
 . Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
