--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -7,16 +7,18 @@ The provider's limit has priority over the conversion hosts' limits. For example
 
 .Changing the maximum number of concurrent migrations for conversion hosts
 
-A limit increase affects all migration plans immediately. Virtual machines that are queued to migrate will migrate in greater numbers.
+An increase affects all migration plans immediately. Virtual machines that are queued to migrate will migrate in greater numbers.
 
-A limit decrease affects future migration plans. Migration plans that are in progress will continue to use the limit that was set when the plan was created.
+A decrease affects future migration plans. Migration plans that are in progress will continue to use the limit that was set when the plan was created.
 
-You can change the limits of some or all conversion hosts:
+To change the maximum number of concurrent migrations of all conversion hosts:
 
-* To change the limits of all conversion hosts, click menu:Compute[Migration > Migration Settings] and select the maximum number of concurrent migrations per conversion host.
+* While configuring xref:VDDK_and_SSH_Configuring_the_conversion_hosts[conversion hosts for transformation], you can set the `v2v_max_concurrent_conversions` variable in `extra_vars.yml` to the new limit.
 
-* To change the limit of a specific conversion host to `20`, enter this command on the CloudForms machine:
-+
+* After creating the conversion hosts, you can click menu:Compute[Migration > Migration Settings] in CloudForms and select the new limit.
+
+To change the maximum number of concurrent migrations of a specific conversion host, enter the following command on the CloudForms machine:
+
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # vmdb
