--- a/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
@@ -184,7 +184,7 @@ $ oc scale statefulset cloudforms --replicas=<old-value>
 $ oc scale statefulset cloudforms-backend --replicas=<old-value>
 ----
 
-Your {product-title_short} environment now updated.
+Your {product-title_short} environment is now updated to use the new container images.
 
 
 [[modified-template-update]]
@@ -247,7 +247,7 @@ $ oc scale statefulset cloudforms --replicas=<old-value>
 $ oc scale statefulset cloudforms-backend --replicas=<old-value>
 ----
 
-Your {product-title_short} environment is now updated.
+Your {product-title_short} environment is now updated to use the new template and container images.
 
 
 
