corrected stop pods command

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
@@ -134,7 +134,8 @@ You must perform a database restore on an offline environment. All pods must be 
 . Shut down all pods:
 +
 ----
-$ oc stop all pods
+$ oc scale dc --all --replicas=0
+$ oc scale statefulset --all --replicas=0
 ----
 +
 . To initiate the database restore, create the restore template:
